[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/MenuBG.tscn" type="PackedScene" id=1]
[ext_resource path="res://misc/theme.tres" type="Theme" id=2]
[ext_resource path="res://misc/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://textures/title.png" type="Texture" id=4]
[ext_resource path="res://scripts/menu.gd" type="Script" id=5]
[ext_resource path="res://audio/mus/Main_Theme.ogg" type="AudioStream" id=6]
[ext_resource path="res://audio/sfx/clock/clock_00.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/sfx/clock/clock_01.wav" type="AudioStream" id=8]
[ext_resource path="res://misc/Righteous-Regular.ttf" type="DynamicFontData" id=9]

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false
skew = Vector2( 1, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.952941, 0.705882, 0.270588, 1 )

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false
skew = Vector2( 1, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.831373, 0.611765, 0.278431, 1 )

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false
skew = Vector2( 1, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0.85098, 0.290196, 1 )

[sub_resource type="ImageTexture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
skew = Vector2( 1, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 38.0
expand_margin_bottom = 38.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0.32549 )
skew = Vector2( 1, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.52549, 0.52549, 0.52549, 1 )
expand_margin_top = 34.0
expand_margin_bottom = 34.0
anti_aliasing = false

[sub_resource type="DynamicFont" id=7]
size = 80
use_filter = true
extra_spacing_top = 40
extra_spacing_bottom = 11
extra_spacing_char = 3
font_data = ExtResource( 9 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
fxaa = true
render_target_update_mode = 3

[node name="MenuBG" parent="ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 100

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 294.0
margin_right = 1920.0
margin_bottom = 786.0
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2"]
visible = false
margin_right = 512.0
margin_bottom = 512.0
size_flags_horizontal = 0
texture = ExtResource( 4 )

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_right = 360.0
margin_bottom = 492.0
rect_min_size = Vector2( 360, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_constants/separation = 8

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer2/Buttons"]
margin_right = 360.0
margin_bottom = 71.0
theme = ExtResource( 2 )
custom_colors/font_color_focus = Color( 1, 0.972549, 0.278431, 1 )
custom_colors/font_color = Color( 1, 0.972549, 0.278431, 1 )
custom_colors/font_color_hover = Color( 1, 0.972549, 0.278431, 1 )
custom_colors/font_color_pressed = Color( 1, 0.972549, 0.278431, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Music" type="HSlider" parent="MarginContainer/VBoxContainer2/Buttons"]
margin_top = 79.0
margin_right = 360.0
margin_bottom = 163.0
rect_min_size = Vector2( 0, 84 )
custom_icons/grabber_disabled = SubResource( 3 )
custom_icons/grabber_highlight = SubResource( 3 )
custom_icons/grabber = SubResource( 3 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 2 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/Buttons/Music"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "MUSIC"
align = 1
valign = 1

[node name="SFX" type="HSlider" parent="MarginContainer/VBoxContainer2/Buttons"]
margin_top = 171.0
margin_right = 360.0
margin_bottom = 255.0
rect_min_size = Vector2( 0, 84 )
custom_icons/grabber_disabled = SubResource( 3 )
custom_icons/grabber_highlight = SubResource( 3 )
custom_icons/grabber = SubResource( 3 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 2 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/Buttons/SFX"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "SOUNDS"
align = 1
valign = 1

[node name="Scanlines" type="Button" parent="MarginContainer/VBoxContainer2/Buttons"]
margin_top = 263.0
margin_right = 360.0
margin_bottom = 334.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
pressed = true
text = "SCANLINES"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorDist" type="Button" parent="MarginContainer/VBoxContainer2/Buttons"]
margin_top = 342.0
margin_right = 360.0
margin_bottom = 413.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
pressed = true
text = "CA"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer2/Buttons"]
margin_top = 421.0
margin_right = 360.0
margin_bottom = 492.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
bus = "Music"

[node name="Clock1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="Clock2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="Label" type="Label" parent="."]
margin_right = 1918.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 7 )
text = "Cat That Steals Stuff and Gets in Trouble"
align = 1
valign = 1

[connection signal="button_down" from="MarginContainer/VBoxContainer2/Buttons/Play" to="." method="_on_play_button_down"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer2/Buttons/Music" to="." method="_on_music_value_changed"]
[connection signal="drag_ended" from="MarginContainer/VBoxContainer2/Buttons/SFX" to="." method="_on_sfx_drag_ended"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer2/Buttons/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/Buttons/Scanlines" to="." method="_on_scanlines_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/Buttons/ColorDist" to="." method="_oncolors_toggled"]
[connection signal="button_down" from="MarginContainer/VBoxContainer2/Buttons/Quit" to="." method="_on_quit_button_down"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Buttons/Quit" to="." method="_on_quit_pressed"]
